# JoyPiNoteBetterLib

./: Modules.md  README.md  _testAll.py  pyproject.toml  requirements.txt
JoyPiNoteBetterLib/: __init__.py
JoyPiNoteBetterLib/Modules/: ButtonMatrix.py  Buzzer.py  HumTemp.py  Joystick.py  LcdDisplay.py  LedMatrix.py  LightSensor.py  Nfc.py  Relay.py  Seg7x4.py  Servomotor.py  SoundSensor.py  Stepmotor.py  TiltSensor.py  TouchSensor.py  Ultrasonic.py  Vibrator.py
JoyPiNoteBetterLib/Other/: Clear.py
JoyPiNoteBetterLib/Shared/: SharedGpio.py  SharedI2C.py  SharedSmbus.py  SharedSpi.py
demo/: clock.py  glintAnimation.py  idleAnimation.py  invisMaze.py  morse.py  pixelCanvas.py  textDisplay.py
